web/src/css/styles.less
/* Fonts */

@font-face {
  font-family: 'Press Start 2P';
  src: url(./PressStart2P-Regular.ttf) format('truetype');
}

/* Variables */

@page-width: 810px;
@page-background-color: #f7f7f7;

/* Default elements */

body {
    background: #5c94fc;
    overflow-wrap: anywhere;
}
ul {
    margin-top: 0.4em;
    list-style: square;
}
li {
    margin-bottom: 0.4em;
}
h2 {
    margin: 0.1em 0 0.6em ;
}
button {
    overflow-wrap: initial;
}
textarea {
    min-height: 5em;
}
table {
    margin-bottom: 1em;
}
th {
    vertical-align: bottom;
    white-space: nowrap;
}
th, td {
    overflow-wrap: break-word;
    padding-top: 0.5em;
    padding-left: 0;
    padding-bottom: 0.5em;
    padding-right: 2.5em;
}
td {
    vertical-align: top;
}
a:hover {
    color: #00baff;
}

/* Specific elements */

#page {
    max-width: @page-width;
    margin: 0 auto;
}
#main {
    background: @page-background-color;
    border: 4px solid black;
    margin: 2em 0 0.5em 0;
    padding: 1.2em 1.8em 1.6em;
}
#header {
    text-align: center;
}
#title {
    font-size: 2.3em;
    &:hover #cow {
        display: inline-block;
    }
}
#cow {
    display: none;
    width: 1.15em;
    vertical-align: top;
    margin-top: 0.06em;
    margin-left: 0.4em;
    &:hover {
       transform: rotate(8deg);
    }
}
#nav {
    border-bottom: 4px solid pink;
    padding-bottom: 1em;
}
#content {
    padding-top: 1.5em;
}
#bet-actions-container, .bet-modal {
    margin-bottom: 2em;
}
.button-container {
    .nes-btn {
        width: 40%;
        min-width: 16em;
        display: block;
        margin: 1em auto;
    }
}
#bet-actions {
    text-align: center;
    .error {
        font-style: italic;
        font-size: 0.9em;
        display: block;
        margin-bottom: 1.5em;
    }
    .nes-btn:last-child {
        margin: 0 auto 0 auto;
    }
}
#bet-summary {
    width: auto;
    td:nth-child(1) {
        text-align: right;
        padding-right: 1.5em;
        white-space: nowrap;
    }
}
.field-note {
    color: #606060;
    font-size: 0.85em;
    margin: 0 0 0 4px;
}
#footer {
    font-size: 0.75em;
    margin-bottom: 5em;
    padding-left: 0.1em;
    padding-right: 0.2em;
    a {
        opacity: 0.7;
        color: white;
        &:hover {
            opacity: 1;
            color: white;
            text-decoration: none;
        }
    }
}
#footer-links {
    float: left;
    font-size: 1.9em;
    line-height: 0.75em;
    .icon {
        margin-right: 0.2em;
    }
}
#footer-signature {
    float: right;
    .nes-icon {
        vertical-align: bottom;
    }
}
#footer a:hover .rainbow, .rainbow:hover {
    text-decoration: none;
    background-image: linear-gradient(to left, violet, indigo, blue, green, gold, orange, red);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.cloud, .steak {
    position: absolute;
    width: 145px;
    height: 108px;
    background-repeat: no-repeat;
}
.cloud {
    background-image:  url(../img/cloud.png);
    &:hover {
        background-size: 150px;
        width: 150px;
        height: 113px;
    }
}
.steak {
    background-image:  url(../img/steak.svg);
    background-size: 140px;
    background-position: center;
}
#not-found-img {
    width: 100%;
    border: 4px solid black;
    image-rendering: pixelated;
}
#secret {
    display: none;
}
.player-box {
    border: 4px solid black;
    margin: 1em 0;
    padding: 1em;
    .player-box-answer {
        display: block;
        margin-top: 1em;
    }
}

/* Mobile */

@media (max-width: @page-width) {
    body {
        font-size: 0.75em;
    }
    textarea {
        min-height: 80px;
    }
    #main {
        border-width: 0 0 4px 0;
        margin-top: 0
    }
    #footer {
        padding-left: 0.5em;
        padding-right: 0.6em;
    }
    th, td {
        &:nth-child(1) {
            padding-right: 2em;
        }
        padding-right: 1em;
    }
}

/* Customize NES.css */

.nes-container {
    &.with-title > .title {
        background-color: @page-background-color;
    }
}
.nes-icon.is-small {
    transform: scale(1.1);
    margin-bottom: 0.1em;
}
.nes-icon.is-custom {
    margin: 0 0.5em 0.4em 0.2em;
    transform: scale(1.6);
}
.custom-logo {
    margin: 0 -0.4em -0.3em -0.4em;
    transform: scale(0.75);
}
.nes-select {
    margin-top: 0;
}
.nes-field {
    margin-top: 1.8em;
}

